// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots LazyloadOnce API 1`] = `
.c0 {
  height: 2800px;
  padding-top: 1800px;
  background-color: skyblue;
}

<div
  className="c0"
>
  <div
    style={
      Object {
        "height": 24,
      }
    }
  >
    <span
      style={
        Object {
          "fontSize": 0,
        }
      }
    />
  </div>
</div>
`;

exports[`Storyshots LazyloadOnce With component props 1`] = `
.c1 {
  border-width: 1px;
  border-style: solid;
  outline: none;
  box-sizing: border-box;
  -webkit-transition: background-color cubic-bezier(0.47,0,0.75,0.72) 0.3s;
  transition: background-color cubic-bezier(0.47,0,0.75,0.72) 0.3s;
  line-height: 0;
  cursor: pointer;
  background-color: #00A1DE;
  color: #FFFFFF;
  border-radius: 3px;
  width: initial;
  min-width: 80px;
  height: 32px;
  padding: 6px 15px;
  font-size: 1rem;
  border-color: rgb(0,130,179);
}

.c1:hover {
  background-color: rgb(0,151,208);
}

.c1:active {
  background-color: rgb(0,144,198);
}

.c0 {
  height: 2800px;
  padding-top: 1800px;
  background-color: skyblue;
}

<div
  className="c0"
>
  <button
    className="c1"
    style={
      Object {
        "height": 24,
      }
    }
  >
    <span
      style={
        Object {
          "fontSize": 0,
        }
      }
    />
  </button>
</div>
`;
